@@ -1,12 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
 noinst_HEADERS = \
-	Accessor.h \
-	KeyWords.h \
-	Platform.h \
-	PropSet.h \
-	WindowAccessor.h \
-	SString.h
+	ILexer.h \
+	Platform.h
 
 scintilla_includedir = $(includedir)/geany/scintilla/
 scintilla_include_HEADERS = \
